--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -66,6 +66,23 @@ table {
   padding-right: 30px;
   width: 960px;
 }
+/*
+  ========================================
+  Clearfix
+  ========================================
+*/
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+.group:after {
+  clear: both;
+}
+.group {
+  clear: both;
+  *zoom: 1;
+}
 
 /*
   ========================================
@@ -75,6 +92,17 @@ table {
 
 h1, h3, h4, h5, p{
   margin-bottom:22px;}
+/*
+  ========================================
+  Primary header
+  ========================================
+*/
+
+.logo { 
+  border-top: 4px solid #648880;
+  padding: 40px 0 22px 0;
+  float: left;
+}
 
   /*
   ========================================
@@ -103,4 +131,17 @@ h1, h3, h4, h5, p{
   padding: 22px 80px 66px 80px;
 }
 
-                  
+/*
+  ========================================
+  Primary footer
+  ========================================
+*/
+
+.primary-footer small {
+  float: left;
+}
+           
+.primary-footer {
+  padding-bottom: 44px;
+  padding-top: 44px;
+}
