--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -54,7 +54,7 @@ Custom Styles
 */
 body{
   color:#888;
-  font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 300 16px/22px "lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /*
@@ -147,6 +147,7 @@ h5 {
   color: #a9b2b9;
   font-size: 14px;
   font-weight: 400;
+  text-transform:uppercase;
 }
 strong {
   font-weight: 400;
@@ -165,8 +166,12 @@ a:hover{
 }
 a{
   color:#648880;
+  text-decoration: none;
 }
-
+.teaser a:hover {
+color: #a9b2b9;
+}
+p a {border-bottom: 1px solid #dfe2e5;}
 /*
   ========================================
   Buttons
@@ -196,15 +201,22 @@ a{
   border-top: 4px solid #648880;
   float: left;
    font-size: 48px;
+   font-weight: 100;
+   letter-spacing:.5px;
+   line-height: 44px;
+   text-transform: uppercase;
   line-height: 44px;
   padding: 40px 0 22px 0;
 }
 .tagline {
   margin: 66px 0 22px 0;
+  text-align: right;
 }
 .primary-nav {
   font-size: 14px;
   font-weight: 400;
+  letter-spacing: .5px;
+  text-transform: uppercase;
 }
 
 /*
@@ -233,11 +245,21 @@ a{
 .hero {
   line-height: 44px;
   padding: 22px 80px 66px 80px;
+  text-align: center;
 }
 .hero h2 {
   font-size: 36px;
 }
 .hero p {
   font-size: 24px;
+  font-weight: 100;
 }
 
+/*
+  ========================================
+  Navigation
+  ========================================
+*/
+.nav {
+  text-align: right;
+}
