--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -53,7 +53,8 @@ Custom Styles
 ==========================================
 */
 body{
-  color:#888;
+  background:#293f50;
+  color: #888;
   font: 300 16px/22px "lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -172,6 +173,15 @@ a{
 color: #a9b2b9;
 }
 p a {border-bottom: 1px solid #dfe2e5;}
+.primary-header a,
+.primary-footer a {
+  color: #fff;
+}
+.primary-header a:hover,
+.primary-footer a:hover {
+  color: #648880;
+}
+
 /*
   ========================================
   Buttons
@@ -180,15 +190,22 @@ p a {border-bottom: 1px solid #dfe2e5;}
 
 .btn {
   border-radius: 5px;
+  color: #fff;
+  cursor:pointer;
+  display:inline-block;
+  font-weight: 400;
+  letter-spacing: .5px;
   display: inline-block;
   margin: 0;
+  text-transform: uppercase;
 }
 .btn-alt {
-  border: 1px solid #dfe2e5;
+  border: 1px solid #fff;
   padding: 10px 30px;
 }
-.teaser a:hover h3 {
-  color: #a9b2b9;
+.btn-alt:hover {
+  background: #fff;
+  color: #648880;
 }
 
 /*
@@ -243,6 +260,7 @@ p a {border-bottom: 1px solid #dfe2e5;}
 */
 
 .hero {
+  color: #fff;
   line-height: 44px;
   padding: 22px 80px 66px 80px;
   text-align: center;
