--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -281,3 +281,13 @@ p a {border-bottom: 1px solid #dfe2e5;}
 .nav {
   text-align: right;
 }
+/*
+  ========================================
+  Rows
+  ========================================
+  */
+  .row {
+  background: #fff;
+  min-width: 960px;
+  padding: 66px 0 44px 0;
+}
