--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -48,14 +48,15 @@ table {
 }
 
 /*
-========================================
-Custom Styles
-==========================================
+  ========================================
+  Custom styles
+  ========================================
 */
-body{
-  background:#293f50;
+
+body {
+  background: #293f50;
   color: #888;
-  font: 300 16px/22px "lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /*
@@ -119,16 +120,37 @@ body{
 
 /*
   ========================================
+  Rows
+  ========================================
+*/
+
+.row,
+.row-alt {
+  min-width: 960px;
+}
+.row {
+  background: #fff;
+  padding: 66px 0 44px 0;
+}
+.row-alt {
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background:    -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background:         linear-gradient(to right, #a1d3b0, #f6f1d3);
+  padding: 44px 0 22px 0;
+}
+
+/*
+  ========================================
   Typography
   ========================================
 */
 
-h1, h3, h4, h5, p {
-  margin-bottom: 22px;
-}
-
 h1, h2, h3, h4 {
   color: #648880;
+}
+h1, h3, h4, h5, p {
+  margin-bottom: 22px;
 }
 h1 {
   font-size: 36px;
@@ -148,13 +170,28 @@ h5 {
   color: #a9b2b9;
   font-size: 14px;
   font-weight: 400;
-  text-transform:uppercase;
+  text-transform: uppercase;
 }
 strong {
   font-weight: 400;
 }
-cite, em {
+cite,
+em {
   font-style: italic;
+}
+
+/*
+  ========================================
+  Leads
+  ========================================
+*/
+
+.lead {
+  text-align: center;
+}
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
 }
 
 /*
@@ -162,17 +199,17 @@ cite, em {
   Links
   ========================================
 */
-a:hover{
-  color:#a9b2b9
-}
-a{
-  color:#648880;
+
+a {
+  color: #648880;
   text-decoration: none;
 }
-.teaser a:hover {
-color: #a9b2b9;
+a:hover {
+  color: #a9b2b9;
 }
-p a {border-bottom: 1px solid #dfe2e5;}
+p a {
+  border-bottom: 1px solid #dfe2e5;
+}
 .primary-header a,
 .primary-footer a {
   color: #fff;
@@ -191,11 +228,10 @@ p a {border-bottom: 1px solid #dfe2e5;}
 .btn {
   border-radius: 5px;
   color: #fff;
-  cursor:pointer;
-  display:inline-block;
+  cursor: pointer;
+  display: inline-block;
   font-weight: 400;
   letter-spacing: .5px;
-  display: inline-block;
   margin: 0;
   text-transform: uppercase;
 }
@@ -217,13 +253,12 @@ p a {border-bottom: 1px solid #dfe2e5;}
 .logo {
   border-top: 4px solid #648880;
   float: left;
-   font-size: 48px;
-   font-weight: 100;
-   letter-spacing:.5px;
-   line-height: 44px;
-   text-transform: uppercase;
+  font-size: 48px;
+  font-weight: 100;
+  letter-spacing: .5px;
   line-height: 44px;
   padding: 40px 0 22px 0;
+  text-transform: uppercase;
 }
 .tagline {
   margin: 66px 0 22px 0;
@@ -243,7 +278,7 @@ p a {border-bottom: 1px solid #dfe2e5;}
 */
 
 .primary-footer {
-  color:#648880;
+  color: #648880;
   font-size: 14px;
   padding-bottom: 44px;
   padding-top: 44px;
@@ -251,6 +286,16 @@ p a {border-bottom: 1px solid #dfe2e5;}
 .primary-footer small {
   float: left;
   font-weight: 400;
+}
+
+/*
+  ========================================
+  Navigation
+  ========================================
+*/
+
+.nav {
+  text-align: right;
 }
 
 /*
@@ -272,22 +317,6 @@ p a {border-bottom: 1px solid #dfe2e5;}
   font-size: 24px;
   font-weight: 100;
 }
-
-/*
-  ========================================
-  Navigation
-  ========================================
-*/
-.nav {
-  text-align: right;
-}
-/*
-  ========================================
-  Rows
-  ========================================
-  */
-  .row {
-  background: #fff;
-  min-width: 960px;
-  padding: 66px 0 44px 0;
+.teaser a:hover h3 {
+  color: #a9b2b9;
 }
